fix: gradle build